--- a/style.css
+++ b/style.css
@@ -2,18 +2,18 @@ body {
     background-color: #eee;
 }
 
-#content {
+#message {
     width: 400px;
-    background-color: #fff;
+    background-color: #ddaaaa;
     padding: 20px;
-    padding-top: 0;
     font-family: Calibri;
     font-size: 18px;
     color: #444;
     margin: 0 auto;
-
-    max-height: 250px;
-    overflow: hidden;
+    text-align: center;
+    border: 1px solid #ff7777;
+    font-weight: bold;
+    opacity: 0;
 
     /* Set transitions up. */
     -webkit-transition: max-height 0.7s;
@@ -21,8 +21,8 @@ body {
     transition: max-height 0.7s;
 }
 
-#content.open {
-    max-height: 1000px;
+#message.show {
+    opacity: 1; 
 
     /* Set transition up. */
     -webkit-transition: max-height 0.7s;
@@ -30,16 +30,14 @@ body {
     transition: max-height 0.7s;
 }
 
-#show-more {
-    background-color: #1594e5;
-    color: #fff;
-    font-family: Calibri;
-    display: block;
-    width: 140px;
-    font-size: 24px;
-    text-transform: uppercase;
-    padding: 10px;
-    text-align: center;
-    margin: 20px auto;
-    cursor: pointer;
+#colour-changer {
+    width: 200px;
+    height: 100px;
+    margin: 30px auto;
+    border: 1px solid #000;
+    background-color: #fff;
+
+    -webkit-transition: background 0.7s; 
+    -moz-transition: background 0.7s; 
+    transition: background 0.7s;
 }
